# rnn-text-gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb
src/: dataset.py  generate.py  models.py  preprocess.py  train.py
