[project]
name = "rnn-text-gen"
version = "0.1.0"
description = "Comparative analysis of RNN, LSTM, and GRU architectures for character-level text generation on Leo Tolstoy's War and Peace."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "streamlit>=1.55.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
